# yagoutpay

./: README.md
Backend/: Cargo.toml
Backend/src/: main.rs
Frontend/: package-lock.json  package.json  tailwind.config.js
Frontend/src/assets/: main.css
Frontend/src/pages/: checkout.vue  failure.vue  index.vue  success.vue
Frontend/src/router/: index.ts
