[package]
name = "yagoutpay"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
cbc = "0.1"          # new CBC mode crate
aes = "0.8"          # current AES crate
block-padding = "0.3"
sha2 = "0.10"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
utoipa = "5"
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }


