[package]
name = "yagoutpay"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
openssl = { version = "0.10", features = ["vendored"] }
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"
sha2 = "0.10"
base64 = "0.21"
env_logger = "0.10"
hex = "0.4"
dotenv = "0.15"





